--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"laralib/l5scaffold": "^1.0",
 		"nesbot/carbon": "^1.19",
 		"raveren/kint": "^1.0",
-		"barryvdh/laravel-ide-helper": "^2.1"
+		"barryvdh/laravel-ide-helper": "^2.1",
+		"illuminate/html": "^5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
